# EADConnect

./: .gitignore  README.md  main.py  pyproject.toml
eadconnect/: client.py  config.py  endpoints.py
eadconnect/http/: navigator.py
eadconnect/services/: academic_service.py  notifier.py
eadconnect/utils/: auth.py  file_manager.py  pdf.py
education/: client.py  config.py  endpoints.py
education/http/: navigator.py
education/utils/: auth.py  file_manager.py  pdf.py
