[project]
name = "eadconnect"
version = "0.1.0"
description = "Uma ponte entre você e a plataforma de EAD do Grupo A Educação!"
authors = [
    {name = "cleiton",email = "cleiton.leonel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "fpdf2 (>=2.8.2,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "google-genai (>=1.10.0,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "telethon (>=1.40.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
